--- a/Calculadora.html
+++ b/Calculadora.html
@@ -13,7 +13,7 @@
 
 <body style="background-color: #3b4664;">
   <div class="container bg">
-    <div class="row">
+    <div class="row bg-r">
       <div class="col-6 bg2">
 
         <Div class="calc">Calc</Div>
